[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://scenes/hud/hud-layout.png" type="Texture" id=2]
[ext_resource path="res://scenes/hud/status/Status.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/buttons/hud_menu/HUDMenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/buttons/hud_other/HubOther.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/panels/inventory/inventory_panel.png" type="Texture" id=6]
[ext_resource path="res://scenes/buttons/hud_inventory/HUDInventory.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=2]

resource_name = "hide"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0, -142 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=1]

resource_name = "show"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, -142 ) ]
}

[node name="HUD" type="CanvasLayer" index="0" groups=[
"HUD",
]]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Placeholder" type="Sprite" parent="." index="0"]

visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Status" parent="." index="1" instance=ExtResource( 3 )]

[node name="HUDMenuButton" parent="." index="2" instance=ExtResource( 4 )]

margin_left = 220.0
margin_right = 230.0
rect_scale = Vector2( 2, 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="HubOther" parent="." index="3" instance=ExtResource( 5 )]

margin_left = 210.0
margin_top = 130.0
margin_right = 225.0
margin_bottom = 145.0
rect_scale = Vector2( 2, 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Inventory" type="Node2D" parent="." index="4"]

position = Vector2( 0, 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="NinePatchRect" parent="Inventory" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 160.0
margin_right = 120.0
margin_bottom = 229.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
_sections_unfolded = [ "Axis Stretch", "Patch Margin", "Rect" ]

[node name="HUDInventory" parent="Inventory" index="1" instance=ExtResource( 7 )]

margin_left = 98.0
margin_top = 144.0
margin_right = 120.0
margin_bottom = 157.0
rect_scale = Vector2( 2, 2 )
toggle_mode = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="AnimInv" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hide = SubResource( 2 )
anims/show = SubResource( 1 )
blend_times = [  ]

[connection signal="toggled" from="Inventory/HUDInventory" to="." method="_on_HUDInventory_toggled"]


